--- a/shared/style/action_menu.css
+++ b/shared/style/action_menu.css
@@ -4,7 +4,9 @@
 
 /* Main dialog setup */
 form[role="dialog"] {
-  background: url(action_menu/images/ui/pattern.png) repeat left top, url(action_menu/images/ui/gradient.png) no-repeat left top / 100% 100%;
+  background:
+    url(action_menu/images/ui/pattern.png) repeat left top,
+    url(action_menu/images/ui/gradient.png) no-repeat left top / 100% 100%;
   overflow: hidden;
   position: absolute;
   z-index: 100;
@@ -14,14 +16,16 @@ form[role="dialog"] {
   bottom: 0;
   padding: 0 0 7rem;
   font-family: "Open Sans", Sans-serif;
+  /**
+   * Using "font-size: 0" to avoid the unwanted visual space (about 3px) created
+   * by white spaces and line breaks in the code between inline-block elements.
+   */
   font-size: 0;
-  /* Using font-size: 0; we avoid the unwanted visual space (about 3px)
-  created by white-spaces and break lines in the code between inline-block elements */
   color: #fff;
 }
 
 form[role="dialog"]:before {
-  content: "";
+  content: '';
   display: inline-block;
   vertical-align: top;
   width: 1px;
@@ -29,27 +33,22 @@ form[role="dialog"]:before {
   margin-left: -1px;
 }
 
-form[role="dialog"] > section {
-  padding: 0 1.5rem 0;
+form[role="dialog"] > header:first-child {
   -moz-box-sizing: padding-box;
   width: 100%;
-  height: 100%;
   display: inline-block;
   vertical-align: top;
   white-space: normal;
-}
-
-form[role="dialog"] h1 {
   font: 1.6rem/1em 'Open Sans', Sans-serif;
   color: #fff;
   border-bottom: 0.1rem solid #616262;
   background: url(action_menu/images/ui/alpha.png) repeat 0 0;
-  margin: 0 -1.5rem;
   padding: 2rem 3rem 0 3rem;
   height: 5rem;
   -moz-box-sizing: border-box;
 }
-form[role="dialog"] h1:after {
+
+form[role="dialog"] > header:after {
   content: '';
   position: absolute;
   width: 100%;
@@ -60,7 +59,7 @@ form[role="dialog"] h1:after {
 }
 
 /* Specific component code */
-form[role="dialog"] menu.actions {
+form[role="dialog"] > menu {
   margin: 0;
   padding: 0;
   width: auto;
@@ -72,8 +71,7 @@ form[role="dialog"] menu.actions {
   bottom: 0;
 }
 
-form[role="dialog"] menu.actions > button,
-form[role="dialog"] menu.actions > a[role="button"] {
+form[role="dialog"] > menu > button {
   width: calc(100% - 5rem);
   height: 4rem;
   -moz-box-sizing: border-box;
@@ -91,12 +89,12 @@ form[role="dialog"] menu.actions > a[role="button"] {
   text-align: left;
   padding: 0 1rem;
   margin: 0 2.5rem 1rem 2.5rem;
-  background: #4E4E4E padding-box;
+  background: #4e4e4e padding-box;
   border-radius: 0.3rem;
   border: solid 1px rgba(0, 0, 0, 0.25);
 }
 
-form[role="dialog"] menu.actions > button:last-child {
+form[role="dialog"] > menu > button:last-child {
   text-shadow: 1px 1px 0 rgba(255,255,255,0.3);
   color: #333;
   background-image: url(action_menu/images/ui/default.png);
@@ -107,7 +105,8 @@ form[role="dialog"] menu.actions > button:last-child {
   text-align: center;
   font-size: 1.6rem;
 }
-form[role="dialog"] menu.actions > button:last-child:before {
+
+form[role="dialog"] > menu > button:last-child:before {
   content: '';
   position: absolute;
   width: 100%;
@@ -120,14 +119,15 @@ form[role="dialog"] menu.actions > button:last-child:before {
 }
 
 /* Press state */
-form[role="dialog"] menu.actions > button:active {
+form[role="dialog"] > menu > button:active {
   background-color: #006f86;
   color: #333;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
 }
 
-form[role="dialog"] menu.actions > button:last-child:active {
+form[role="dialog"] > menu > button:last-child:active {
   border: solid 1px #008aaa;
   background: #008aaa;
   color: #333;
 }
+
