--- a/apps/communications/dialer/style/dialer.css
+++ b/apps/communications/dialer/style/dialer.css
@@ -66,21 +66,10 @@ a:hover, a:active, a:focus {
   text-align: center;
 }
 
-#views {
-  top: 0;
-  height: -moz-calc(100% - 4rem);
-  width: 100%;
-}
-
-#views > *[role=tabpanel] {
-  height: 100%;
-  width: 100%;
-}
-
 body.hidden *[data-l10n-id] {
   visibility: hidden;
 }
-
+/*
 *[role=tablist] *[role=tabpanel] {
   -moz-transform: translateY(-10000px);
 }
@@ -88,71 +77,24 @@ body.hidden *[data-l10n-id] {
 *[role=tablist] *:target {
   -moz-transform: translateY(0px);
 }
+*/
 
-/* Structure for toolbar */
-.toolbar {
-  height: 4rem;
-  width: 100%;
-  background: rgba(0,0,0,.3);
+/* Structure for toolbar*/
+
+.icon-recents:after {
+  background-image: url("images/recents.png") !important;
 }
 
-.toolbar-option {
-  opacity: 0.6;
+.icon-contacts:after {
+  background-image: url("images/contacts.png") !important;
 }
 
-.toolbar-option-selected {
-  opacity: 1;
+.icon-keypad:after {
+  background-image: url("images/dialpad.png") !important;
 }
 
-.toolbar-option:active {
-  opacity: 1;
-  border: 0;
-  border-style: none;
+.with-keyboard #views, .with-keyboard #contacts-view,
+.with-keyboard [role="tablist"] [role="tabpanel"] {
+  height: 100% !important;
 }
 
-/* Toolbar Icon */
-.icon {
-  pointer-events: none;
-  margin: 0 auto;
-}
-
-.icon-recents {
-  width: 4rem;
-  height: 4rem;
-  background-image: url("images/ActionIcon_40x40_recents.png");
-}
-
-.icon-contacts {
-  width: 4rem;
-  height: 4rem;
-  background-image: url("images/ActionIcon_40x40_contacts.png");
-}
-
-.icon-keypad {
-  width: 4rem;
-  height: 4rem;
-  background-image: url("images/ActionIcon_40x40_dialpad.png");
-}
-
-.disabled-icon {
-  opacity: 0.6;
-}
-
-#views > [role="tabpanel"] {
-  height: calc(100% - 4rem);
-  overflow: hidden;
-}
-
-[role="tablist"] *:target {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.with-keyboard #views, .with-keyboard #contacts-view {
-  height: 100%;
-}
-
-.with-keyboard #main-toolbar {
-  display: none;
-}
