--- a/apps/communications/dialer/style/keypad.css
+++ b/apps/communications/dialer/style/keypad.css
@@ -10,7 +10,7 @@
 }
 
 #keyboard-view {
-  width: 100%;
+  /*width: 100%;*/
   height: 100%;
 }
 
@@ -22,7 +22,7 @@
 
 #phone-number-view-container {
   width: 100%;
-  height: -moz-calc(100% - 34.5rem);
+  height: -moz-calc(100% - 35rem);
   background: #242B36;
   text-align: center;
   display: table;
@@ -49,7 +49,7 @@
 #keypad-delete {
   text-align: center;
   width: 4rem;
-  visibility: hidden;
+  display: none;
 }
 
 #keypad-delete > div {
