--- a/apps/communications/ftu/css/style.css
+++ b/apps/communications/ftu/css/style.css
@@ -223,7 +223,7 @@ html, body {
 /*
   Wifi configuration
 */
-#wifi [data-type="list"] li > a > p {
+#wifi [data-type="list"] li > p {
   pointer-events: none;
 }
 
